--- a/notes/command.tex
+++ b/notes/command.tex
@@ -1,12 +1,38 @@
-\newcommand{\fU}{\underline{f}}
-\newcommand{\gU}{\underline{g}}
-\newcommand{\uU}{\underline{u}}
-\newcommand{\aU}{\underline{a}}
-\newcommand{\bU}{\underline{b}}
-\newcommand{\cU}{\underline{c}}
-\newcommand{\dU}{\underline{d}}
+\newcommand{\aU}{\underline{\bm{a}}}
+\newcommand{\bU}{\underline{\bm{b}}} 
+\newcommand{\cU}{\underline{\bm{c}}} 
+\newcommand{\dU}{\underline{\bm{d}}}
+\newcommand{\eU}{\underline{\bm{e}}}
+\newcommand{\fU}{\underline{\bm{f}}}
+\newcommand{\gU}{\underline{\bm{g}}}
+\newcommand{\hU}{\underline{\bm{h}}}
+\newcommand{\iU}{\underline{\bm{i}}}
+\newcommand{\jU}{\underline{\bm{j}}}
+\newcommand{\kU}{\underline{\bm{k}}}
+\newcommand{\lU}{\underline{\bm{l}}}
+\newcommand{\mU}{\underline{\bm{m}}}
+\newcommand{\nU}{\underline{\bm{n}}}
+\newcommand{\oU}{\underline{\bm{o}}}
+\newcommand{\pU}{\underline{\bm{p}}}
+\newcommand{\qU}{\underline{\bm{q}}}
+\newcommand{\rU}{\underline{\bm{r}}}
+\newcommand{\sU}{\underline{\bm{s}}}
+\newcommand{\tU}{\underline{\bm{t}}}
+\newcommand{\uU}{\underline{\bm{u}}}
+\newcommand{\vU}{\underline{\bm{v}}}
+\newcommand{\wU}{\underline{\bm{w}}}
+\newcommand{\xU}{\underline{\bm{x}}}
+\newcommand{\yU}{\underline{\bm{y}}}
+\newcommand{\zU}{\underline{\bm{z}}}
+
 \newcommand{\zeroU}{\underline{0}}
 \newcommand{\C}[2]{C_{{#1},{#2}}}
+\newcommand{\cy}[3]{\mathcal{C}_{{#1},{#2},{#3}}}
 \newcommand{\inv}{^{-1}}
 \newcommand{\HHX}{\hat{H}_X}
 \newcommand{\HHZ}{\hat{H}_Z}
+\newcommand{\tr}{^\top}
+
+\newcommand{\ACfour}[5]{A_{#1} &= a_{#2}\inv a_{#3} a_{#4}\inv a_{#5}}
+\newcommand{\BCfour}[5]{B_{#1} &= a_{#2}\inv(b_{#3} - b_{#2}) + a_{#2}\inv a_{#3} a_{#4}\inv (b_{#5} - b_{#4})}
+\newcommand{\ABCfour}[5]{\ACfour{#1}{#2}{#3}{#4}{#5}\\\BCfour{#1}{#2}{#3}{#4}{#5}}
