--- a/notes/command.tex
+++ b/notes/command.tex
@@ -27,6 +27,7 @@
 
 \newcommand{\zeroU}{\underline{0}}
 \newcommand{\C}[2]{C_{{#1},{#2}}}
+\newcommand{\calC}{\mathcal{C}}
 \newcommand{\cy}[3]{\mathcal{C}_{{#1},{#2},{#3}}}
 \newcommand{\inv}{^{-1}}
 \newcommand{\HHX}{\hat{H}_X}
